syntax = "proto2";
package PushHeartBeat;

import "Common.proto";

message S2C
{
	required string time = 1; //时间字符串,30秒一次
}

message Response
{
	required int32 retType = 1 [default = -400]; //RetType,返回结果
	optional string retMsg = 2;
	optional int32 errCode = 3;
	
	optional S2C s2c = 4;
}
