syntax = "proto2";
package Qot_PushStockBasic;

import "Common.proto";
import "Qot_Common.proto";

message S2C
{
	required Qot_Common.StockBasic stockBasic	= 1;	//股票基本行情
}

message Response
{
	required Common.RetType retType = 1;
	optional string retMsg = 2;
	optional int32 errCode = 3;
	
	optional S2C s2c = 4;
}
