syntax = "proto2";
package Qot_RegQotPush;

import "Common.proto";
import "Qot_Common.proto";

message C2S
{
	required Qot_Common.Stock stock = 1; //股票
	required int32 subType = 2; //Qot_Common.SubType,要注册到该连接的订阅类型
	required bool isRegOrUnReg = 3; //注册或取消
}

message Request
{
	required C2S c2s = 1;
}

message Response
{
	required int32 retType = 1 [default = -400]; //RetType,返回结果
	optional string retMsg = 2;
	optional int32 errCode = 3;
}
