syntax = "proto2";
package Qot_ReqStockBasic;

import "Common.proto";
import "Qot_Common.proto";

message C2S
{
	repeated Qot_Common.Stock stock				= 1;	//股票
}

message S2C
{
	repeated Qot_Common.StockBasic stockBasic	= 1;	//股票基本行情
}

message Request
{
	required C2S c2s = 1;
}

message Response
{
	required Common.RetType retType = 1;
	optional string retMsg = 2;
	optional int32 errCode = 3;
	
	optional S2C s2c = 4;
}
