syntax = "proto2";
package Qot_ReqSubInfo;

import "Common.proto";
import "Qot_Common.proto";

message C2S
{
	optional bool isReqAllConn = 1; //是否返回所有连接的订阅状态,不传或者传false只返回当前连接数据
}

message SubInfo
{
	required int32 subType = 1; //Qot_Common.SubType,订阅类型
	repeated Qot_Common.Stock stock = 2; //订阅该类型行情的股票
}

message ConnSubInfo
{
	repeated SubInfo subInfo = 1; //该连接订阅信息
	required int32 usedQuota = 2; //该连接已经使用的订阅额度
	required bool isOwnConnData = 3; //用于区分是否是自己连接的数据
}

message S2C
{
	repeated ConnSubInfo connSubInfo = 1; //订阅订阅信息
	required int32 totalUsedQuota = 2; //Gateway已使用的订阅额度
	required int32 remainQuota = 3; //Gateway剩余订阅额度
}

message Request
{
	required C2S c2s = 1;
}

message Response
{
	required int32 retType = 1 [default = -400]; //RetType,返回结果
	optional string retMsg = 2;
	optional int32 errCode = 3;
	
	optional S2C s2c = 4;
}
