syntax = "proto2";
package Qot_ReqTradeDate;

import "Common.proto";
import "Qot_Common.proto";

message C2S
{
	required int32 market = 1; //Qot_Common.QotMarket,股票市场
	optional string beginTime = 2; //开始时间字符串,若不指定,则默认返回一年数据
	optional string endTime = 3; //结束时间字符串,若不指定,则为当前时间
}

message TradeDate
{
	required int64 time = 1; //时间戳
	required string timeStr = 2; //时间字符串,根据市场和时间戳转换所得
}

message S2C
{
	repeated TradeDate tradeDate = 1; //交易日
}

message Request
{
	required C2S c2s = 1;
}

message Response
{
	required int32 retType = 1; //RetType,返回结果
	optional string retMsg = 2;
	optional int32 errCode = 3;
	
	optional S2C s2c = 4;
}
